--- a/Information/Web.config
+++ b/Information/Web.config
@@ -10,16 +10,15 @@
   </configSections>
   <connectionStrings>
     <!--
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Information-fefdc1f0-bd81-4ce9-b712-93a062e01031;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Information-fefdc1f0-bd81-4ce9-b712-93a062e01031.mdf" providerName="System.Data.SqlClient" />
-    <add name="InforDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Information;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Information.mdf" providerName="System.Data.SqlClient" />
-    <add name="MemberDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Information;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Information.mdf" providerName="System.Data.SqlClient" />
-  -->
+    
     <add name="InforDbContext"
     providerName="System.Data.SqlClient"
     connectionString="Data Source=ROY-LENOVO13;Initial Catalog=aspnet-Information;Integrated Security=True;MultipleActiveResultSets=True" />
     <add name="MemberDbContext"
     providerName="System.Data.SqlClient"
     connectionString="Data Source=ROY-LENOVO13;Initial Catalog=aspnet-Information;Integrated Security=True;MultipleActiveResultSets=True" />
+  -->
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=ROY-LENOVO13;Initial Catalog=aspnet-Information;Integrated Security=True;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -30,7 +29,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Home/Login" timeout="2880"></forms>
+      <forms name="Login" loginUrl="~/Home/Login" timeout="2880"></forms>
     </authentication>
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
