--- a/Information/packages.config
+++ b/Information/packages.config
@@ -28,6 +28,8 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="NPOI" version="2.3.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="RouteJs.Mvc5" version="2.2.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
